[gd_scene load_steps=2 format=3 uid="uid://b2e2wmjmuuyua"]

[ext_resource type="Script" uid="uid://c3nt8dw2te1ia" path="res://Menus/main_menu.gd" id="1_jf8mj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jf8mj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CampaignButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Campaign"

[node name="TracksButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "My Tracks"

[node name="EditorButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level Editor"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
